[B]0.2.1[/B]
Migrated from skin.xperience1080-arctic
Thematic consolidation

[B]0.2.2[/B]
Music/Video Fullscreen Info / OSD clock bar cornered
Added option for small music vis info
Added option to disable scrolling text on music vis
Added option to disable view header
Added option to disable clock
Added blue glow borders
Added themes for faded covers
Fixed poster info discart alignment issue for sets
Fixed info tags for movie sets
Fixed overlay for Views > Settings: Video Information
Re-added EPG Colors
Added option for long or short videoosd top bar
Fixed episode info play button not showing

[B]0.2.3[/B]
Big update to PVR section
Added "panel list" view type (replaces info list)
Modified "big list" to be more minimal (removed panel behind)

[B]0.2.4[/B]
Cleanup
  - Video viewtype filenames
  
String localization	
  - MyVideoNav
  - Video Viewtypes
  - Skin Settings
  - MyMusicNav
  - Music Viewtypes
  - Adv Launcher Viewtypes
  - MyPrograms
  
Video Info/OSD show plot on up.